# Hypersomnia

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .mcp.json  .travis.yml  AGENTS.md  AI_REMARKS.md  Augmentations.sln  Augmentations.vcxproj  Augmentations.vcxproj.filters  BUILDING.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  Dockerfile  GUIDE.md  Hypersomnia.sln  Hypersomnia.vcxproj  Hypersomnia.vcxproj.filters  README.md  README_SERVER.md  Untitled  animation.h  appveyor.yml  augmentations.cpp  augmentations.h  azure-pipelines.yml  build_instructions.txt  client_server_setup.cpp  client_setup.cpp  config.lua  determinism_test_setup.cpp  developer notes.txt  docker-compose.yaml  generated_introspect.h  generated_introspect_format.h  generated_introspectors.h  (+20 more)
Augmentations_test/: Augmentations_test.vcxproj
New folder/: Augmentations.vcxproj  Augmentations.vcxproj.filters
SDK/: animatorandconfig.cpp  atlaspacking.cpp  binpacking.cpp  collisiondetection.cpp
ToDo/: todo.done.tdl  todo.tdl
application/: call_config_script.cpp  call_config_script.h  config_lua_table.cpp  config_lua_table.h  config_values.cpp  config_values.h  game_window.cpp  game_window.h  menu_button_type.h
augs/: al_log.cpp  al_log.h  augmentations.cpp  build_settings.h  ensure.cpp  ensure.h  file.cpp  global_libraries.cpp  global_libraries.h  log.cpp  log.h  lua_state_wrapper.cpp  lua_state_wrapper.h  options.cpp  options.h  padding_byte.h  print.cpp  print.h  script.cpp  serialization.h  stlutil.h  stream.cpp  stream.h  templates.cpp  templates.h  tweaker.cpp  tweaker.h  zeroed_pod.h
client/: draw_tile_highlights.cpp  draw_tile_highlights.h  utilities.h
cmake/: AppRun  Hypersomnia.desktop  Hypersomnia.rc  add_include_dirs_of.cmake  appimage_builder.sh  archive_and_upload.sh  build.sh  build_nonsteam_integration.sh  build_steam_integration.sh  clean.sh  configure_runtime_library.cmake  create_archive.py.in  create_build_archive.cmake  diff_columns.py  dockerfile_server_config.json  dockerfile_server_config.lua  fix_headers.py  generate_archives.sh  get_build_times.sh  linux_launcher.sh  linux_launcher_install.sh  mcp_build_server.py  print_bt_if_core_found.sh  push_tag.sh  test_and_pack.ps1  test_pack_upload.ps1  upload.py  upload_if_exe_found.sh  version_file_generator.cpp  web_shell.html  winrar_create_archive.py.in
cmake/steam_integration/: CMakeLists.txt  rich_presence_localization.vdf  steam_integration.cpp  steam_integration.h  steam_integration_callbacks.h  steam_integration_helpers.hpp  steam_rich_presence_pairs.h
cmake/steam_integration/steamworks/: put_sdk_here.sh
cmake/version_file_generator/: CMakeLists.txt  version_file_generator.cpp
config/: config.cpp  config.h
docs/: CNAME  Gemfile  Getting-started.md  README.md  _config.yml  calls.dot  contributing.md  core_principles.md  deps.dot  folder_structure.md  index.md  inference_interface.dot
engine/: camera_class.lua  common.lua  debugging.lua  entity_class.lua  entity_creation_util.lua  entity_system.lua  load_libraries.lua  resource_creation_util.lua  scene_class.lua  tiled_map_loader.lua  world_class.lua
entity_system/: component.cpp  component.h  entity.cpp  entity.h  entity_ptr.cpp  entity_ptr.h  entity_system.h  processing_system.cpp  processing_system.h  signature_matcher.cpp  signature_matcher.h  system.cpp  system.h  templated_list.cpp  templated_list.h  type_registry.cpp  type_registry.h  world.cpp  world.h
error/: error.cpp  error.h
game/: all_component_includes.h  all_message_includes.h  all_system_includes.h  bind_game_and_augs.cpp  bindings.cpp  bindings.h  black_box_component.h  build_settings.h  component_synchronizer.h  components_instantiation.h  container_sizes.h  cosmic_entropy.cpp  cosmic_entropy.h  cosmic_profiler.cpp  cosmic_profiler.h  cosmos.cpp  cosmos.h  definition_interface.cpp  definition_interface.h  draw_tile_highlights.cpp  ecs_declaration.h  entity_handle.cpp  entity_handle.h  entity_handle_declaration.h  entity_id.cpp  entity_id.h  entity_relations.h  entropy_player.cpp  entropy_player.h  full_entity_definition.h  game_overworld.cpp  game_overworld.h  game_window.cpp  game_window.h  game_world.cpp  game_world.h  hypersomnia_overworld.cpp  hypersomnia_overworld.h  hypersomnia_world.cpp  hypersomnia_world.h  (+16 more)
game_framework/: all_component_includes.h  all_message_includes.h  all_system_includes.h  bind_game_framework_and_augs.cpp  bind_game_framework_and_augs.h  game_framework.cpp  game_framework.h  game_overworld.cpp  game_overworld.h  game_world.cpp  game_world.h  main.cpp  settings.cpp  settings.h  whole_engine_binding.cpp  world_instance.cpp  world_instance.h
generated_introspectors/: include_all_introspectors.h  introspect_augs_baked_font.h  introspect_augs_font_glyph_metadata.h  introspect_augs_font_loading_input.h  introspect_augs_font_metadata_from_file.h  introspect_augs_image_paint_circle_filled_command.h  introspect_augs_image_paint_circle_midpoint_command.h  introspect_augs_image_paint_line_command.h  introspect_augs_sound_effect_modifier.h  introspect_basic_cosmic_entropy.h  introspect_basic_inventory_slot_id.h  introspect_components_animation.h  introspect_components_animation_response.h  introspect_components_attitude.h  introspect_components_behaviour_tree.h  introspect_components_behaviour_tree_instance.h  introspect_components_car.h  introspect_components_car_engine_entities.h  introspect_components_child.h  introspect_components_container.h  introspect_components_crosshair.h  introspect_components_damage.h  introspect_components_driver.h  introspect_components_dynamic_tree_node.h  introspect_components_fixtures.h  introspect_components_fixtures_convex_partitioned_collider.h  introspect_components_flags.h  introspect_components_force_joint.h  introspect_components_grenade.h  introspect_components_guid.h  introspect_components_gun.h  introspect_components_interpolation.h  introspect_components_item.h  introspect_components_item_slot_transfers.h  introspect_components_light.h  introspect_components_light_attenuation.h  (+41 more)
(+6908 files in other folders)
